# wit2wadm

./: .gitignore  Cargo.toml  README.md  ui.sh  wasmcloud.toml
.github/workflows/: release.yml
crates/wit2wadm/: Cargo.toml
crates/wit2wadm-lib/: Cargo.toml
crates/wit2wadm-lib/src/: convert.rs  interface.rs
crates/wit2wadm/src/: cli.rs  convert.rs  interface.rs  lib.rs  manifest.rs
docs/: index.html  index.js
docs/transpile/: package-lock.json  package.json  wit2wadm_component.core.wasm  wit2wadm_component.js
src/: lib.rs  main.rs  manifest.rs
wash-plugin/: Cargo.toml  wasmcloud.toml
wash-plugin/src/: dir_parser.rs  lib.rs
wash-plugin/wit/: deps.toml  world.wit
wit/: deps.toml  world.wit
