[package]
name = "wit2wadm-cli"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/wit2wadm"]

[lib]
name = "wit2wadm_component"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "wit2wadm"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
wit-parser = "0.205.0"

[dependencies]
wit2wadm = { path = "./crates/wit2wadm" }
wit-bindgen = "0.24.0"
wit-parser = { workspace = true }
wit-component = "0.205.0"
serde_yaml = "0.9.34"
