[package]
name = "wit2wadm-cli"
version = "0.2.1"
edition = "2021"

[workspace]
members = ["crates/wit2wadm", "wash-plugin"]

[lib]
name = "wit2wadm_component"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "wit2wadm"
path = "bin/main.rs"

[workspace.dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
serde_yaml = "0.9"
wit-bindgen = "0.26"
wit-component = "0.209"
wit-parser = "0.209"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
wit-bindgen = { workspace = true }
wit2wadm = { path = "./crates/wit2wadm", features = ["cli"] }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
