[package]
name = "wit2wadm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[features]
cli = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
wadm = { version = "0.11.0", default-features = false, git = "https://github.com/wasmcloud/wadm", branch = "feat/gate-by-feature-flag" }
wasmparser = "0.209.0"
wit-component = { workspace = true }
wit-parser = { workspace = true }
